WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298402
REGRESSION(
298805@main
?): inspector/worker/dom-debugger-event-after-terminate-crash.html is flaky crash
https://bugs.webkit.org/show_bug.cgi?id=298402
Summary
REGRESSION(298805@main?): inspector/worker/dom-debugger-event-after-terminate...
Marta Darbinyan
Reported
2025-09-04 10:22:49 PDT
The following test is flaky crash in macOS both in debug and release. The crashes started after
298805@main
. inspector/worker/dom-debugger-event-after-terminate-crash.html Thread 9 Crashed:: Dispatch queue: 0 com.apple.JavaScriptCore 0x105e8f730 JSC::ShadowChicken::update(JSC::VM&, JSC::CallFrame*) (.cold.3) 1 com.apple.JavaScriptCore 0x10549d490 JSC::ShadowChicken::update(JSC::VM&, JSC::CallFrame*) 2 com.apple.JavaScriptCore 0x105500170 JSC::genericUnwind(JSC::VM&, JSC::CallFrame*) 3 com.apple.JavaScriptCore 0x1056080e8 llint_slow_path_handle_exception 4 com.apple.JavaScriptCore 0x105ed3bdc llint_entry 5 com.apple.JavaScriptCore 0x105ebf0b4 vmEntryToJavaScript 6 com.apple.JavaScriptCore 0x10549b14c JSC::Interpreter::executeCall(JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 7 com.apple.JavaScriptCore 0x10568ef10 JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 8 com.apple.WebCore 0x11e8b7220 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 9 com.apple.WebCore 0x11ecf33f0 WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener>>, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 10 com.apple.WebCore 0x11ece9a0c WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 11 com.apple.WebCore 0x11ecf3094 WebCore::EventTarget::dispatchEvent(WebCore::Event&) 12 com.apple.WebCore 0x11fdbe104 WTF::Detail::CallableWrapper<WebCore::WorkerMessagingProxy::postMessageToWorkerGlobalScope(WebCore::MessageWithMessagePorts&&)::$_28, void, WebCore::ScriptExecutionContext&>::call(WebCore::ScriptExecutionContext&) 13 com.apple.WebCore 0x11fdc3c9c WebCore::WorkerDedicatedRunLoop::Task::performTask(WebCore::WorkerOrWorkletGlobalScope*) 14 com.apple.WebCore 0x11fdc36d8 WebCore::WorkerDedicatedRunLoop::runInMode(WebCore::WorkerOrWorkletGlobalScope*, WebCore::ModePredicate const&) 15 com.apple.WebCore 0x11fdc1f58 WebCore::WorkerDedicatedRunLoop::run(WebCore::WorkerOrWorkletGlobalScope*) 16 com.apple.WebCore 0x11fdc1e58 WebCore::WorkerOrWorkletThread::runEventLoop() 17 com.apple.WebCore 0x11fdc26a0 WebCore::WorkerOrWorkletThread::workerOrWorkletThread() 18 com.apple.JavaScriptCore 0x104915204 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 19 com.apple.JavaScriptCore 0x104917628 WTF::wtfThreadEntryPoint(void*) 20 libsystem_pthread.dylib 0x183449f94 _pthread_start + 136 /AppleInternal/Library/BuildRoots/289ffcb4-455d-11ef-953d-e2437461156c/Library/Caches/com.apple.xbs/Sources/libpthread/src/pthread.c:931 21 libsystem_pthread.dylib 0x183444d34 thread_start + 8 Test result:
https://ews-build.webkit.org/#/builders/136/builds/23088
Test history:
https://results.webkit.org/?suite=layout-tests&test=inspector%2Fworker%2Fdom-debugger-event-after-terminate-crash.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-04 10:24:21 PDT
<
rdar://problem/159864802
>
EWS
Comment 2
2025-09-04 10:47:44 PDT
Test gardening commit
299568@main
(2759b4f08285): <
https://commits.webkit.org/299568@main
> Reviewed commits have been landed. Closing PR #50310 and removing active labels.
Mark Lam
Comment 3
2025-10-08 00:44:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51997
EWS
Comment 4
2025-10-08 11:21:33 PDT
Committed
301218@main
(75aed5e343cd): <
https://commits.webkit.org/301218@main
> Reviewed commits have been landed. Closing PR #51997 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug